TEST_PROGRAMS/VALID/05/leading_zeroes_in_octal.go
/* Leading 0's in octal. */

package main

var o int = 000000001
var z int = 0000

func main() {
	// Do nothing
}
