TEST_PROGRAMS/INVALID/05/squote_string.go
/* String defined by single quotes. */

package main

var s = 'single quoted string' // Error: Single quotes are reserved for runes and not strings.

func main() {
	// Do nothing.
}
